fix mobile spacing profile

--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -3,6 +3,7 @@
     margin-bottom: 2em;
 
     @media (max-width: $m) {
+        margin-top: 2em;
         margin-bottom: 1em;
     }
 }
